--- a/frontend/TodoWebApp/package.json
+++ b/frontend/TodoWebApp/package.json
@@ -16,6 +16,7 @@
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
+    "axios": "^1.10.0",
     "graphql": "^15.10.1",
     "graphql-tag": "^2.12.6",
     "nuxt": "^2.15.8",
